# docstra

./: .pre-commit-config.yaml  CHANGELOG.md  GENERATOR.md  README.md  action.yml  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docstra/: __init__.py  __main__.py
docstra/core/: __init__.py  app.py  cli.py
docstra/core/config/: settings.py  wizard.py
docstra/core/document_processing/: document.py
docstra/core/documentation/: checks.py  dependencies.py  generator.py  overrides.py  prompts.py  setup.py  wizard.py
docstra/core/documentation/pipeline/: __init__.py  analyze.py  crosslink.py  impact.py  llms_txt.py  plan.py  render.py
docstra/core/indexing/: code_index.py  model.py  repo_map.py
docstra/core/ingestion/: embeddings.py  fts_storage.py  storage.py
docstra/core/llm/: anthropic.py  factory.py  local.py  ollama.py  openai.py
docstra/core/mcp/: __init__.py  server.py  tools.py
docstra/core/retrieval/: chroma.py  context_aware.py  evaluation.py  fts.py  fusion.py
docstra/core/services/: change_detection_service.py  chat_service.py  documentation_service.py  ingestion_service.py  initialization_service.py  metrics_service.py  query_service.py  repository_explorer_service.py  visualization_service.py
docstra/core/tracking/: llm_tracker.py
docstra/core/utils/: colors.py  file_collector.py  language_detector.py  token_counter.py
examples/workflows/: docstra-docs.yml
scripts/: ci_docs_update.py
tests/: test_chroma_storage.py  test_core_index.py  test_doc_checks.py  test_doc_pipeline.py  test_embeddings.py  test_file_collector.py  test_fts_retriever.py  test_fts_storage.py  test_fusion_retriever.py  test_generator_cross_references.py  test_incremental_update.py  test_index_command.py  test_index_loading.py  test_ingestion_force.py  test_ingestion_fts.py  test_llm_defaults_and_routing.py  test_mcp_tools.py  test_retrieval_config.py  test_retrieval_evaluation.py
