[project]
name = "docstra"
version = "0.1.15"
description = "LLM-powered code documentation assistant"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Jørgen Andresen Osberg", email = "jorgenao@uio.no" },
    { name = "Jonathan Selstad Hofstein", email = "jonatsho@uio.no" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.109.1,<0.110",
    "chromadb>=0.6.3,<0.7",
    "einops>=0.8.1,<0.9",
    "fastapi>=0.136.3,<0.137",
    "jinaai>=0.2.10,<0.3",
    "jinja2>=3.1.6,<4",
    "markdown>=3.8,<4",
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.11,<10",
    "mkdocstrings>=1.0.4,<2",
    "openai>=2.41.1,<3",
    "pydantic>=2.10.6,<3",
    "python-dotenv>=1.0.0,<2",
    "python-multipart>=0.0.20,<1",
    "pyyaml>=6.0.2,<7",
    "requests>=2.32.3,<3",
    "rich>=13.9.4,<14",
    "sentence-transformers>=5.5.1,<6",
    "starlette>=1.0.1,<2",
    "tenacity>=9.1.2,<10",
    "tiktoken>=0.9.0,<1",
    "torch>=2.6.0,<3",
    "transformers>=5.11.0,<6",
    "tree-sitter>=0.24.0,<0.25",
    "tree-sitter-language-pack>=0.6.1,<0.7",
    "typer>=0.15.4,<0.16",
    "uvicorn>=0.34.2,<0.35",
]

[project.urls]
Repository = "https://github.com/jorgenosberg/docstra"

[project.scripts]
docstra = "docstra.core.cli:app"

[dependency-groups]
dev = [
    "furo>=2024.8.6,<2025.0",
    "pre-commit>=4.2.0,<5",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.0.0,<7",
    "ruff>=0.15.16,<0.16",
    "sphinx>=8.2.3,<9",
    "ty>=0.0.47",
]

[build-system]
requires = ["uv_build>=0.11.20,<0.12"]
build-backend = "uv_build"

[tool.uv]
index-strategy = "first-index"
required-version = ">=0.11.19,<0.12"

# Keep this project on PyPI by default. If a non-PyPI source is ever needed,
# pin it explicitly with [tool.uv.sources] and an explicit [[tool.uv.index]].
[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ty]

[tool.ty.src]
include = ["docstra", "scripts"]

[tool.ty.environment]
python-version = "3.12"
